* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 2.0.6-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Wed Nov 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.0.5-0
- Update badges and contribution guide URL in README.md

* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 2.0.5-0
- Added support for Puppet 5

* Fri Jun 22 2018 Nick Miller <nick.miller@onyxpoint.com> - 2.0.5-0
- Remove old rpm requires file and update CI assets

* Thu Jun 08 2017 Nick Miller <nick.miller@onyxpoint.com> - 2.0.4-0
- Update puppet requirement in metadata.json
- Add empty spec test so travis will pass

* Tue Feb 21 2017 Nick Miller <nick.miller@onyxpoint.com> - 2.0.3-0
- Fix travis test

* Mon Dec 19 2016 Nick Markowski <nmarkowski@keywcorp.com> - 2.0.3-0
- Removed package metadata

* Fri Nov 18 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.0.2-0
- Remove `compliance_markup` and provides general housekeeping

* Mon Aug 15 2016 Nick Miller <nick.miller@onyxpoint.com> - 2.0.1-0
- Moved to semantic versioning
- Create skeleton folder structure

* Mon May 25 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-3
- Updates for public release

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-2
- Changed puppet-server requirement to puppet

* Mon Dec 26 2011 Maintenance
2.0.0-1
- Updated the spec file to add in the 'lib' directory and set the directory
  permissions more cleanly.

* Tue Jan 11 2011 Maintenance
2.0.0-0
- Refactored for SIMP-2.0.0-alpha release

* Fri Jun 11 2010 Maintenance
1.0-0
- Stub to go along with the new simp version jump.

* Thu Feb 18 2010 Maintenance
0.1-11
- Updated the files list to explicitly name the user/group of the directories.
  For some reaons, %defattr didn't seem to carry down to them properly.

* Wed Dec 09 2009 Maintenance
0.1-10
- Forced permission and mode setting on the /etc/puppet/environments/simp/modules/site/files
  directory.