@@ -1,6 +1,6 @@
 {
   "name": "simp-site",
-  "version": "2.0.6",
+  "version": "2.1.0",
   "author": "SIMP Team",
   "summary": "A skeleton profile module",
   "license": "Apache-2.0",
@@ -15,11 +15,11 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.1.0 < 4.0.0"
+      "version_requirement": ">= 3.15.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 4.13.0 < 6.0.0"
+      "version_requirement": ">= 5.2.0"
     }
   ],
   "operatingsystem_support": [
@@ -48,7 +48,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.7.0 < 6.0.0"
+      "version_requirement": ">= 5.0.0"
     }
   ]
 }
